n8n/k8s/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`flows.yirrasystems.com`) && (PathPrefix(`/webhook`) || PathPrefix(`/webhook-test`))
    priority: 30
    services:
    - name: n8n
      port: 5678
  - kind: Rule
    match: Host(`flows.yirrasystems.com`) && (PathPrefix(`/`) || PathPrefix(`/rest`) || PathPrefix(`/api`) || PathPrefix(`/static`)) && (Headers(`CF-Connecting-IP`, `122.199.30.183`) || HeadersRegexp(`X-Forwarded-For`, `(^|,\\s*)122\\.199\\.30\\.183(,|$)`))
    priority: 10
    services:
    - name: n8n
      port: 5678
